<resources>
    <string name="app_name">Toolbar</string>
    <string name="matches_count">Количество вхождений:</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="action_3">Action 3</string>
    <string name="long_string">Однажды, в студёную зимнюю пору\n
Я из лесу вышел; был сильный мороз.\n
Гляжу, поднимается медленно в гору\n
Лошадка, везущая хворосту воз.\n
И, шествуя важно, в спокойствии чинном,\n
Лошадку ведёт под уздцы мужичок\n
В больших сапогах, в полушубке овчинном,\n
В больших рукавицах... а сам с ноготок!\n
«Здорово, парнище!» — «Ступай себе мимо!» —\n
«Уж больно ты грозен, как я погляжу!\n
Откуда дровишки?» — «Из лесу, вестимо,\n
Отец, слышишь, рубит, а я отвожу».\n
(В лесу раздавался топор дровосека.) —\n
«А что, у отца-то большая семья?» —\n
«Семья-то большая, да два человека\n
Всего мужиков-то: отец мой да я...» —\n
«Так вон оно что! А как звать тебя?» — «Власом». —\n
«А кой тебе годик?» — «Шестой миновал...\n
Ну, мёртвая!» — крикнул малюточка басом,\n
Рванул под уздцы и быстрей зашагал...\n
На эту картину так солнце светило,\n
Ребёнок был так уморительно мал,\n
Как будто всё это картонное было,\n
Как будто бы в детский театр я попал.\n
Но мальчик был мальчик живой, настоящий,\n
И дровни, и хворост, и пегонький конь,\n
И снег до окошек деревни лежащий,\n
И зимнего солнца холодный огонь —\n
Всё, всё настоящее русское было,\n
С клеймом нелюдимой, мертвящей зимы,\n
Что русской душе так мучительно мило,\n
Что русские мысли вселяет в умы, —\n
Те честные мысли, которым нет доли,\n
Которым нет смерти — . . . . . . . .\n
В которых так много и злобы и боли,\n
‎В которых так много любви!</string>
    <string name="search_status">Search string</string>
</resources>
