<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuAction1"
        android:title="@string/action_1" />
    <item
        android:id="@+id/menuAction2"
        android:icon="@drawable/ic_attach_money"
        android:iconTint="@android:color/white"
        android:title="@string/action_2"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:iconTint="@android:color/white"
        android:title="@string/action_3"
        app:iconTint="@android:color/white"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>